Step 26: (Optional) Remote OData Service

--- a/.docker/nginx/conf/nginx.conf
+++ b/.docker/nginx/conf/nginx.conf
@@ -3,6 +3,11 @@ map $http_upgrade $connection_upgrade {
     '' close;
 }
 
+map $request_uri $request_key {
+    default "";
+    ~^/(?P<key>.+)$ $key;
+}
+
 # Прокси для основного домена
 server {
     server_name walkthrough.sapui5.test;
@@ -18,5 +23,8 @@ server {
         # include details about the original request
         proxy_set_header X-Original-Host $http_host;
         proxy_set_header X-Original-Scheme $scheme;
+    }
+    location /services.odata.org {
+        proxy_pass https://services.odata.org/;
     }
 }
