--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@openui5/themelib_sap_belize": "1.65.1"
   },
   "devDependencies": {
-    "@ui5/cli": "^1.5.0"
+    "@ui5/cli": "^1.5.0",
+    "qunit": "^2.9.2"
   }
 }
